--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -7,11 +7,17 @@
 </head>
 <body>
     <h3> All Listings </h3> 
+
+    <form method="GET" action="/listings/new">
+        <button> Create New Listing </button>
+    </form>
+
+    <ul>
+        <% for (let listing of allListings) {%>
+        <li> <a href="/listings/<%= listing._id %>"> <%= listing.title %> </a> </li> 
+        <% } %>
+       </ul>
 </body>
 </html>
 
-   <ul>
-    <% for (let listing of allListings) {%>
-    <li> <a href="/listings/<%= listing._id %>"> <%= listing.title %> </a> </li> 
-    <% } %>
-   </ul>
+  
