--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -15,6 +15,9 @@
         <li> <%= listing.location %> </li>
         <li> <%= listing.country %> </li>
     </ul>
+
+    <br>
+    <a href="/listings/<%= listing._id %>/edit">Edit This Listing </a>
     
 </body>
 </html>
