--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -18,6 +18,10 @@
 
     <br>
     <a href="/listings/<%= listing._id %>/edit">Edit This Listing </a>
+    <br><br>
+    <form  method="POST"  action="/listings/<%= listing._id%>?_method=DELETE">
+        <button> Delete This Listing </button>
+    </form>
     
 </body>
 </html>
