--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,18 @@
-body{
+/* body{
     background-color: palevioletred;
+} */
+
+/* navabr */
+.navbar {
+    height: 5 rem;
+    background-color: white;
+}
+
+.fa-suitcase-rolling{
+    color: #fe424d;
+    font-size: 2rem;
+}
+
+.nav-link{
+    color: #222222 !important; 
 }
