--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,17 +2,53 @@
     background-color: palevioletred;
 } */
 
-/* navabr */
+/* Navabr */
 .navbar {
     height: 5 rem;
     background-color: white;
 }
 
-.fa-suitcase-rolling{
+.fa-suitcase-rolling {
     color: #fe424d;
     font-size: 2rem;
 }
 
-.nav-link{
-    color: #222222 !important; 
+.nav-link {
+    color: #222222 !important;
+}
+
+/* Foooter */
+
+.f-info-links a {
+    text-decoration: none;
+    color: #222222;
+}
+
+.f-info-links a:hover {
+    text-decoration: underline;
+}
+
+.f-info-links,
+.f-info-socials,
+.f-info-linksf-info-brand {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+
+.f-info-socials i {
+    margin-right: 1rem;
+    font-size: 1.2rem;
+}
+
+.f-info {
+    text-align: center;
+    height: 8rem;
+    background-color: #ddd3d3d8;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: space-evenly;
 }
