--- a/public/css/style.css
+++ b/public/css/style.css
@@ -51,4 +51,25 @@
     flex-wrap: wrap;
     justify-content: center;
     align-items: space-evenly;
+}  
+
+/*  Cards  */
+
+.card{
+    border: none !important;
+    margin-bottom: 2rem;
+}
+
+.card-img-top{
+    border-radius: 1rem !important;
+    width: 100% !important;
+    object-fit: cover !important;
+}
+
+.card-body{
+    padding: 0 !important;
+}
+
+.cart-text p{
+    font-weight: 400;
 }
