--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,17 +1,24 @@
 <% layout("/layouts/boilerplate") %>
-<body>
-    <h3> All Listings </h3> 
 
-    <!-- <form method="GET" action="/listings/new">
+    <body>
+        <h3> All Listings </h3>
+
+        <!-- <form method="GET" action="/listings/new">
         <button> Create New Listing </button>
     </form> -->
 
-    <ul>
+    <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1">
         <% for (let listing of allListings) {%>
-        <li> <a href="/listings/<%= listing._id %>"> <%= listing.title %> </a> </li> 
-        <% } %>
-       </ul>
-</body>
+            <div class="card col" style="width: 18rem;">
+                <img src="<%= listing.image.url %>" class="card-img-top" alt="listing_image">
+                <div class="card-body">
+                    <p class="card-text">
+                        <%= listing.title %> <br>
+                        &#8377; <%= listing.price.toLocaleString("en-IN") %>/ Night
+                    </p>
+                </div>
+            </div>
+            <% } %>
+    </div>
 
-
-  
+    </body>
