--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,13 @@
 body{
     font-family: "Plus Jakarta Sans", sans-serif !important;
-   
+   display: flex;
+   flex-direction: column;
+   min-height: 100vh ;
 } 
+
+.container{
+    flex: 1;
+}
 
 /* Navabr */
 .navbar {
@@ -90,4 +96,10 @@ body{
 .card-img-overlay:hover{
     opacity: 0.2;
     background-color: white;
+}
+
+/* New page */
+.add-btn{
+    background-color: #fe424d !important;
+    border: none !important;
 }
