--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -1,6 +1,6 @@
 <% layout ("layouts/boilerplate.ejs") %>
-<br><br> 
-<div class="row">
+
+<div class="row mt-3">
     <div class="col-8  offset-2 "> 
     <h2> Create A New Listing </h2>
 
@@ -38,10 +38,8 @@
             <input name="listing[location]" placeholder="Nashik,Maharashtra" type="text" class="form-control" />
         </div>
 
-        <br>
-        <button class ="btn btn-dark add-btn"> ADD </button>
+        <button class ="btn btn-dark add-btn mt-3"> ADD </button>
         
-        <br><br><br>
     </div>
     </form>
     
