--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -4,40 +4,55 @@
 
     <h2> Edit Your Listing </h2>
 
-    <form method="POST" action="/listings/<%= listing._id %>?_method=PUT">
+    <form method="POST" action="/listings/<%= listing._id %>?_method=PUT" novalidate class="needs-validation">
 
         <div class="mb-3"> 
             <label for="title" class="form-label">Title</label>
-            <input name="listing[title]" value="<%= listing.title %>" type="text" class="form-control" />
+            <input name="listing[title]" value="<%= listing.title %>" type="text" class="form-control" required/>
+            <div class="valid-feedback">
+                Title looks good!
+            </div>
         </div>
        
         <div class="mb-3">
             <label for="description" class="form-label">Description</label>
-            <textarea name="listing[description]" class="form-control"><%= listing.description %></textarea>
+            <textarea name="listing[description]" class="form-control " required ><%= listing.description %> </textarea>
+            <div class="invalid-feedback">
+                Please write a short Discription.
+              </div>
         </div>
        
         <div class="mb-3">
             <label for="image" class="form-label">Image Link</label>
-            <input name="listing[image.url]" value="<%= listing.image.url %>" type="text" class="form-control" />
+            <input name="listing[image.url]" value="<%= listing.image.url %>" type="text" class="form-control" required/>
         </div>
 
     <div class="row">
 
         <div class="mb-3 col-md-4">
             <label for="price" class="form-label"> Price </label>
-            <input name="listing[price]" value="<%= listing.price %>" type="number" class="form-control" />
+            <input name="listing[price]" value="<%= listing.price %>" type="number" class="form-control" required />
+            <div class="invalid-feedback">
+                Price Should be valid.
+              </div>
         </div>
         
         <div class="mb-3 col-md-8">
             <label for="country" class="form-label"> Country </label>
-            <input name="listing[country]" value="<%= listing.country %>" type="text" class="form-control" />
+            <input name="listing[country]" value="<%= listing.country %>" type="text" class="form-control" required/>
+            <div class="invalid-feedback">
+                Country name Should be valid.
+              </div>
         </div>
 
     </div>
        
         <div> 
             <label for="location" class="form-label"> Location </label>
-            <input name="listing[location]" value="<%= listing.location %>" type="text" class="form-control" />
+            <input name="listing[location]" value="<%= listing.location %>" type="text" class="form-control" required/>
+            <div class="invalid-feedback">
+                Location Should be valid.
+               </div>
         </div>
        
         
@@ -46,3 +61,4 @@
     </form>
 </div>
 </div>
+<script src="/js/script.js"></script>
