--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -8,11 +8,17 @@
         <div class="mb-3">
             <label for="title" class="form-label">Title</label>
             <input name="listing[title]" placeholder="Add a catchy title" type="text" class="form-control" required />
+            <div class="valid-feedback">
+                Title looks good!
+            </div>
         </div>
 
         <div class="mb-3"> 
             <label for="description" class="form-label">Description</label>
             <textarea name="listing[description]" class="form-control" required ></textarea>
+            <div class="invalid-feedback">
+                Please write a short Discription.
+              </div>
         </div>
         
         <div class="mb-3">
@@ -24,11 +30,17 @@
             <div class="mb-3 col-md-4 ">
                 <label for="price" class="form-label" > Price </label>
                 <input name="listing[price]" placeholder="1200" type="number"  class="form-control"  required/>
+                <div class="invalid-feedback">
+                    Price Should be valid.
+                  </div>
             </div>
             
             <div class="mb-3 col-md-8" >
                 <label for="country" class="form-label" > Country </label>
                 <input name="listing[country]" placeholder="India" type="text" class="form-control" required />
+                <div class="invalid-feedback">
+                    Country name Should be valid.
+                  </div>
             </div>
         </div>
 
@@ -36,6 +48,9 @@
         <div class="mb-3"> 
             <label for="location" class="form-label" > Location </label>
             <input name="listing[location]" placeholder="Nashik,Maharashtra" type="text" class="form-control" required />
+            <div class="invalid-feedback">
+               Location Should be valid.
+              </div>
         </div>
 
         <button class ="btn btn-dark add-btn mt-3"> ADD </button>
