--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -29,7 +29,7 @@
         <div class="row">
             <div class="mb-3 col-md-4 ">
                 <label for="price" class="form-label" > Price </label>
-                <input name="listing[price]" placeholder="1200" type="number"  class="form-control"  required/>
+                <input name="listing[price]" placeholder="1200"   class="form-control"  required/>
                 <div class="invalid-feedback">
                     Price Should be valid.
                   </div>
@@ -59,3 +59,7 @@
     </form>
     
 </div>
+
+
+
+<!-- [price ] type="number" -->
