--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -2,7 +2,7 @@
 
     <div class="row">
         <div class="col-8 offset-3 mt-3">
-            <h3> Listing Details </h3>
+            <h3> <%= listing.title %> </h3>
         </div> 
     
     
@@ -10,7 +10,6 @@
         <img src="<%= listing.image.url%>" class="card-img-top show-img" alt="listing_image"/>
         <div class="card-body">
             <p class="card-text"> <b> 
-                <%= listing.title %> </b> <br>
                 <%= listing.description %> <br>
                 &#8377;<%= listing.price.toLocaleString("en-IN") %> <br>
                 <%= listing.location %> <br>
@@ -26,6 +25,24 @@
 
         <form  method="POST"  action="/listings/<%= listing._id%>?_method=DELETE">
             <button  class="btn btn-dark offset-5" > Delete </button>
+        </form>
+    </div>
+<hr>
+    <div class="col-8 offset-3 mb-3">
+        <h4> Leave a Review </h4>
+      
+        <form action="/listings/<%= listing.id %>/reviews" method="POST" novalidate class="needs-validation" >
+            <div class="mb-3 mt-3">
+                <label for="rating" class="form-label">Rating</label>
+                <input type="range" min="1" max="5" id="rating" name="review[rating]" class="form-range" />
+            </div>
+
+            <div class="mb-3 mt-3">
+                <label for="comment"> Comments</label>
+                <textarea name="review[comment]" id="comment" cols="30" rows="5" class="form-control" required></textarea>
+                <div class="invalid-feedback"> Please add Some Comments For Review</div>
+            </div>
+            <button class="btn btn-outline-dark"> Submit </button>
         </form>
     </div>
 
