--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -44,6 +44,15 @@
             </div>
             <button class="btn btn-outline-dark"> Submit </button>
         </form>
+
+        <hr> 
+        
+        <h4> ALL Reviews</h4>
+       <ul>
+        <% for(review of listing.reviews) { %>
+            <li> <%= review.comment%>, <%=review.rating %>Stars</li>
+        <% } %>
+       </ul>
     </div>
 
 </div>
