--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -6,7 +6,7 @@
         </div> 
     
     
-    <div class="card col-6 offset-3 show-card">
+    <div class="card col-6 offset-3 show-card listing-card">
         <img src="<%= listing.image.url%>" class="card-img-top show-img" alt="listing_image"/>
         <div class="card-body">
             <p class="card-text"> <b> 
@@ -47,12 +47,20 @@
 
         <hr> 
         
-        <h4> ALL Reviews</h4>
-       <ul>
-        <% for(review of listing.reviews) { %>
-            <li> <%= review.comment%>, <%=review.rating %>Stars</li>
-        <% } %>
-       </ul>
+      <p><b>ALL Reviews</b></p>
+        <div class="row">
+       <% for(review of listing.reviews) { %>
+        <div class="card col-5 ms-3 mb-3">
+            <div class="card-body">
+                <h5 class="card-title">John Deo</h5>
+                <p class="card-text"><%= review.comment %></p>
+                <p class="card-text"><%= review.rating %>Stars⭐</p>
+            </div> 
+
+        </div>
+    <% } %>
+        </div>
+
     </div>
 
 </div>
