--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -24,7 +24,9 @@
 
 <body>
     <%- include("../includes/navbar.ejs")%>
-        <div class="container"><%-body%></div>
+        <div class="container">
+            <%- include("../includes/flash.ejs")%> 
+            <%-body%></div>
 
 
 
