--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,24 +1,54 @@
+
+<style>
+    .btn-search:hover{
+    background-color: #fe424d;
+    color: #ffff;
+  }
+  .btn-search{
+    background-color: #fe424d;
+    color: #ffff;
+    border-radius: 25px;
+    padding: 0 1rem 0 1rem;
+  }
+  .btn-search i {
+    display: inline;
+    margin-right: 0.5rem;
+  }
+  .search-input{
+    border-radius: 20px;
+    padding: 0.5rem 3rem 0.5rem 3rem;
+  }
+
+</style>
+
 <nav class="navbar navbar-expand-md bg-body-light  border-bottom sticky-top">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#"><i class="fa-solid fa-suitcase-rolling"></i></a>
+      <a class="navbar-brand" href="/listings"><i class="fa-solid fa-suitcase-rolling"></i></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-link" href="/">Home</a>
-          <a class="nav-link" href="/listings">All Listings</a>
-          <a class="nav-link" href="/listings/new">Add New Listing</a>
+          <a class="nav-link" href="/listings">Explore</a>
+
         </div>
 
         <div class="navbar-nav ms-auto">
+          <form class="d-flex" role="search">
+            <input class="form-control me-2 search-input" type="search" placeholder="Search Destination" aria-label="Search">
+            <button class="btn btn-search" type="submit">Search</button>
+          </form>
+        </div>
+
+        <div class="navbar-nav ms-auto">
+          <a class="nav-link" href="/listings/new">Add Your Home </a>
           <% if (!currUser) { %>
-          <a class="nav-link" href="/signup">Sign up</a>
-          <a class="nav-link" href="/login">Log in</a>
+          <a class="nav-link" href="/signup"> <b>Sign up</b></a>
+          <a class="nav-link" href="/login"> <b>Log in</b></a>
           <% } %>
           
           <% if(currUser) { %>
-            <a class="nav-link" href="/logout">Log out</a>
+            <a class="nav-link" href="/logout"> <b>Log out</b></a>
           <% } %>
           
         </div>
