--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,9 +1,11 @@
+
 <footer>
+
     <div class="f-info">
         <div class="f-info-socials">
-            <i class="fa-brands fa-square-youtube"></i>
-            <i class="fa-brands fa-square-instagram"></i>
-            <i class="fa-brands fa-linkedin"></i>
+            <a href="https://github.com/devrajj-bagul"  style="color: inherit;"><i class="fa-brands fa-square-github"></i></i></a>
+            <a href="https://www.instagram.com/devrajj_bagul/" style="color: inherit;"><i class="fa-brands fa-square-instagram"></i></a>
+            <a href="https://www.linkedin.com/in/devraj-bagul-1ab669233/" style="color: inherit;"> <i class="fa-brands fa-linkedin"></i> </a>
 
         </div>
         <div class="f-info-brand">&copy Wanderlust Private Limited </div>
