--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -15,7 +15,7 @@
                     <b><i> Owned By : <%= listing.owner.username %></i></b> <br>
                 <% } %>
                 <%= listing.description %> <br>
-                &#8377;<%= listing.price.toLocaleString("en-IN") %> <br>
+                <b>&#8377;<%= listing.price.toLocaleString("en-IN") %></b> <br>
                 <%= listing.location %> <br>
                 <%= listing.title %> <br>
                 <%= listing.country %> <br>
