Added Media Query

--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -8,7 +8,7 @@
             <a href="https://www.linkedin.com/in/devraj-bagul-1ab669233/" style="color: inherit;"> <i class="fa-brands fa-linkedin"></i> </a>
 
         </div>
-        <div class="f-info-brand">&copy Wanderlust Private Limited </div>
+        <div class="f-info-brand">&copy BagPackers Private Limited </div>
         <div class="f-info-links">
             <a href="/privacy"> Privacy </a>
             <a href="/terms"> Terms </a>
