--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,85 +1,5 @@
 <% layout("/layouts/boilerplate") %>
 
-<style>
-    .show-card {
-        margin-top: 2rem;
-    }
-
-    .show-img {
-        height: auto;
-        width: 100%;
-    }
-
-    .btns {
-        display: flex;
-        justify-content: space-between;
-        margin-top: 1rem;
-    }
-
-    .btns .btn {
-        width: 45%;
-    }
-
-    .review-card {
-        margin-bottom: 1rem;
-    }
-
-    @media (max-width: 992px) {
-        .col-8 {
-            offset: 2;
-        }
-
-        .col-6 {
-            offset: 2;
-        }
-
-        .btns .btn {
-            width: 48%;
-        }
-    }
-
-    @media (max-width: 768px) {
-        .col-8 {
-            offset: 1;
-        }
-
-        .col-6 {
-            offset: 1;
-        }
-
-        .btns {
-            flex-direction: column;
-            align-items: center;
-        }
-
-        .btns .btn {
-            width: 80%;
-            margin-top: 1rem;
-        }
-
-        .review-card {
-            width: 100%;
-        }
-    }
-
-    @media (max-width: 576px) {
-        .col-8,
-        .col-6 {
-            offset: 0;
-        }
-
-        .btns .btn {
-            width: 100%;
-            margin-top: 1rem;
-        }
-
-        .review-card {
-            width: 100%;
-            margin: 0 auto;
-        }
-    }
-</style>
-
 <div class="row">
     <div class="col-8 offset-3 mt-3">
         <h3>
@@ -108,10 +28,10 @@
     <% if(currUser && listing.owner._id.equals(currUser._id)) { %>
 
     <div class="btns">
-        <a href="/listings/<%= listing._id %>/edit" class="btn btn-dark edit-btn">Edit</a>
+        <a href="/listings/<%= listing._id %>/edit" class="btn btn-dark col-1 offset-3 edit-btn">Edit</a>
 
         <form method="POST" action="/listings/<%= listing._id %>?_method=DELETE">
-            <button class="btn btn-dark">Delete</button>
+            <button class="btn btn-dark offset-5">Delete</button>
         </form>
     </div>
 
@@ -120,26 +40,27 @@
     <div class="col-8 offset-3 mb-3">
         <hr/>
     <% if(currUser) { %>
-
+    
         <h4>Leave a Review</h4>
 
         <form action="/listings/<%= listing.id %>/reviews" method="POST" novalidate class="needs-validation">
 
+
             <div class="mb-3 mt-3">
-                <label for="rating" class="form-label">Rating</label>
-                <fieldset class="starability-slot">
-                    <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]" value="1" checked aria-label="No rating." />
-                    <input type="radio" id="first-rate1" name="review[rating]" value="1" />
-                    <label for="first-rate1" title="Terrible">1 star</label>
-                    <input type="radio" id="first-rate2" name="review[rating]" value="2" />
-                    <label for="first-rate2" title="Not good">2 stars</label>
-                    <input type="radio" id="first-rate3" name="review[rating]" value="3" />
-                    <label for="first-rate3" title="Average">3 stars</label>
-                    <input type="radio" id="first-rate4" name="review[rating]" value="4" />
-                    <label for="first-rate4" title="Very good">4 stars</label>
-                    <input type="radio" id="first-rate5" name="review[rating]" value="5" />
-                    <label for="first-rate5" title="Amazing">5 stars</label>
-                </fieldset>
+            <label for="rating" class="form-label">Rating</label>
+            <fieldset class="starability-slot">
+                <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]" value="1" checked aria-label="No rating." />
+                <input type="radio" id="first-rate1" name="review[rating]" value="1" />
+                <label for="first-rate1" title="Terrible">1 star</label>
+                <input type="radio" id="first-rate2" name="review[rating]" value="2" />
+                <label for="first-rate2" title="Not good">2 stars</label>
+                <input type="radio" id="first-rate3" name="review[rating]" value="3" />
+                <label for="first-rate3" title="Average">3 stars</label>
+                <input type="radio" id="first-rate4" name="review[rating]" value="4" />
+                <label for="first-rate4" title="Very good">4 stars</label>
+                <input type="radio" id="first-rate5" name="review[rating]" value="5" />
+                <label for="first-rate5" title="Amazing">5 stars</label>
+              </fieldset>
             </div>
 
             <div class="mb-3 mt-3">
@@ -149,26 +70,30 @@
             </div>
             <button class="btn btn-outline-dark">Submit</button>
         </form>
-        <hr>
+        <hr>  
 
-    <% } %>
-
-    <p><b>ALL Reviews</b></p>
-    <div class="row">
-        <% for (review of listing.reviews) { %>
-            <div class="card review-card col-5 ms-3 mb-3">
-                <div class="card-body">
-                    <h5 class="card-title"><%= review.author.username %></h5>
-                    <p class="starability-result card-text" data-rating="<%= review.rating %>"></p>
-                    <p class="card-text">
-                        <%= review.comment %>
-                    </p>
-                    <form class="mb-3" method="POST" action="/listings/<%= listing._id %>/reviews/<%= review._id %>?_method=DELETE">
-                        <button class="btn btn-sm btn-dark">Delete</button>
-                    </form>
-                </div>
-            </div>
         <% } %>
+
+       
+
+        <p><b>ALL Reviews</b></p>
+        <div class="row">
+            <% for (review of listing.reviews) { %>
+                <div class="card col-5 ms-3 mb-3">
+                    <div class="card-body">
+                        <h5 class="card-title"><%= review.author.username %></h5>
+                        <p class="starability-result card-text" data-rating= <%= review.rating %>></p>
+
+                        <p class="card-text">
+                            <%= review.comment %>
+                        </p>
+
+                        <form class="mb-3" method="POST" action="/listings/<%= listing._id %>/reviews/<%= review._id %>?_method=DELETE">
+                            <button class="btn btn-sm btn-dark">Delete</button>
+                        </form>
+                    </div>
+                </div>
+            <% } %>
+        </div>
     </div>
-</div>
 </div>
